syntax = "proto3";

package follower;                         // opciono, ali preporuƒçeno
option go_package = "database-example/proto/follower;followerpb";

import "google/protobuf/empty.proto";

service FollowerService {
  rpc Ping   (PingRequest)   returns (PingResponse);
  rpc Follow (FollowRequest) returns (google.protobuf.Empty);
  rpc Unfollow (UnfollowRequest)  returns (google.protobuf.Empty);
  rpc GetRecommendations (GetRecommendationsRequest)
    returns (GetRecommendationsResponse);
  rpc GetFollowees (GetFolloweesRequest) returns (GetFolloweesResponse);


}

message PingRequest {}
message PingResponse { string message = 1; }

message FollowRequest {
  string follower_id = 1;  // ID onog ko prati
  string followee_id = 2;  // ID onog koga prati
}

message UnfollowRequest {
  string followee_id = 1;
  string follower_id = 2;
}

message GetRecommendationsRequest {
  string user_id = 1; // iz JWT-a ili eksplicitno
  int32  limit   = 2; // default npr. 10
}

message Recommendation {
  string user_id = 1;
  int64  mutual  = 2; // koliko tvojih prati kandidata
}

message GetRecommendationsResponse {
  repeated Recommendation items = 1;
}

message GetFolloweesRequest {
  string user_id = 1; // koga pratimo (iz JWT-a ili eksplicitno)
  int32  skip    = 2; // opcionalna paginacija
  int32  limit   = 3; // default 20
}

message GetFolloweesResponse {
  repeated string user_ids = 1; // lista ID-jeva koje user prati
}